# chess-coach

./: .gitignore  LICENSE  README.md  meta.json  pyproject.toml  run.sh  setup.sh  viam.fake.json  viam.json  viam.practice.json
docs/: PROTOCOL.md
scripts/: dashboard.py  play_cli.py  test_hush.py  test_kgoal.py  up.sh
src/: main.py
src/lib/: encoding.py  game.py  lichess.py  patterns.py  squeeze_detect.py
src/models/: chess_coach.py  dashboard.py  fakes.py  hush_buzzer.py  kgoal_sensor.py
tests/: test_encoding.py  test_game.py  test_lichess.py  test_squeeze_detect.py
web/: index.html
